@@ -11,7 +11,7 @@
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 # autogenerated list of scripts that only run one test, and lists of 
-# tests-parser.txt files specifying the tests to run.
+# list-of-tests files specifying the tests to run.
 include $(srcdir)/Makefile.onetst
 
 $(srcdir)/Makefile.onetst: \
